Updated dependency roles

--- a/web-infrastructure/roles/nginx/molecule/default/playbook.yml
+++ b/web-infrastructure/roles/nginx/molecule/default/playbook.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: all
+- name: Converge
+  hosts: all
 
   vars:
     nginx_use_ppa: true
@@ -10,11 +11,9 @@
 
   pre_tasks:
     - name: Update apt cache.
-      apt: update_cache=yes cache_valid_time=86400
+      apt: update_cache=yes cache_valid_time=600
       when: ansible_os_family == 'Debian'
-
-    - name: Install dependencies.
-      package: name=curl
+      changed_when: false
 
   roles:
-    - role_under_test
+    - role: geerlingguy.nginx
