--- a/web-infrastructure/site.yml
+++ b/web-infrastructure/site.yml
@@ -1,3 +1,3 @@
 ---
-  - include: webservers.yml
-  - include: loadbalancer.yml
+  - import_playbook: webservers.yml
+  - import_playbook: loadbalancer.yml
