--- a/ansible-tower-clients/Vagrantfile
+++ b/ansible-tower-clients/Vagrantfile
@@ -31,11 +31,12 @@ Vagrant.configure(2) do |config|
       atc.vm.provider "libvirt" do |v|
         v.driver = "kvm"
         v.default_prefix = "demo"
-        v.memory = 384
+        v.memory = 512
         v.cpus = 1
       end
 
       atc.vm.provision "ansible" do |a|
+        a.compatibility_mode = "2.0"
         a.playbook = "playbook.yml"
         a.extra_vars = {
           public_key_file: "id_rsa.pub"
